WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229040
REGRESSION (
r280951
): [ Big Sur ] TestWebKitAPI.AudioRoutingArbitration.Close is failing
https://bugs.webkit.org/show_bug.cgi?id=229040
Summary
REGRESSION (r280951): [ Big Sur ] TestWebKitAPI.AudioRoutingArbitration.Close...
ayumi_kojima
Reported
2021-08-12 09:13:49 PDT
TestWebKitAPI.AudioRoutingArbitration.Close Is failing on Big Sur. History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.AudioRoutingArbitration.Close
Stdio:
https://build.webkit.org/#/builders/70/builds/4445/steps/17/logs/stdio
Attachments
[fast-cq] Patch
(2.69 KB, patch)
2021-08-12 14:15 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-08-12 09:15:03 PDT
<
rdar://problem/81852225
>
ayumi_kojima
Comment 2
2021-08-12 09:19:00 PDT
Looking at the history, it seems to have started at
https://trac.webkit.org/changeset/280951/webkit
Peng Liu
Comment 3
2021-08-12 14:15:23 PDT
Created
attachment 435450
[details]
[fast-cq] Patch
EWS
Comment 4
2021-08-12 20:59:01 PDT
Committed
r281007
(
240497@main
): <
https://commits.webkit.org/240497@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435450
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug