REGRESSION (r280951): [ Big Sur ] TestWebKitAPI.AudioRoutingArbitration.Close is failing https://bugs.webkit.org/show_bug.cgi?id=229040

Reviewed by Eric Carlson.

Function `AudioSessionRoutingArbitratorProxy::processDidTerminate()` should
be called only in the case that the corresponding WebContent process exits,
whereas `GPUProcessConnection::didClose()` (in WebContent process) deals with
the case that the GPU process crashes.

No new tests. Fix an API test failure.

* UIProcess/Media/cocoa/AudioSessionRoutingArbitratorProxyCocoa.mm:
(WebKit::AudioSessionRoutingArbitratorProxy::processDidTerminate):
* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::gpuProcessExited):


Canonical link: https://commits.webkit.org/240497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281007 268f45cc-cd09-0410-ab3c-d52691b4dbfc