Source/WebKit/UIProcess/WebProcessProxy.cpp
@@ -820,10 +820,6 @@ void WebProcessProxy::gpuProcessExited(GPUProcessTerminationReason reason)
 
     for (auto& page : copyToVectorOf<RefPtr<WebPageProxy>>(m_pageMap.values()))
         page->gpuProcessExited(reason);
-
-#if ENABLE(ROUTING_ARBITRATION)
-    m_routingArbitrator->processDidTerminate();
-#endif
 }
 #endif
 
